workspace = { }

[package]
name = "tauri-driver"
version = "0.1.4"
authors = [ "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
license = "Apache-2.0 OR MIT"
homepage = "https://tauri.app"
repository = "https://github.com/tauri-apps/tauri"
description = "Webdriver server for Tauri applications"
readme = "README.md"
edition = "2021"
rust-version = "1.60"

[dependencies]
anyhow = "1"
hyper = { version = "1.1", features = [ "full" ] }
futures = "0.3"
futures-util = "0.3"
pico-args = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
which = "4"
hyper-util = { version = "0.1.2", features = [ "client", "client-legacy", "server", "http1", "server-auto", "tokio" ] }
http-body-util = "0.1.0"
bytes = "1.5.0"

[target."cfg(unix)".dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
